--- a/src/main/resources/view/ItemsForm.fxml
+++ b/src/main/resources/view/ItemsForm.fxml
@@ -13,20 +13,21 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.paint.RadialGradient?>
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="545.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ItemsFormController">
+<AnchorPane prefHeight="619.0" prefWidth="928.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ItemsFormController">
    <children>
-      <ImageView fx:id="itemPane" fitHeight="556.0" fitWidth="823.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="itemPane" fitHeight="634.0" fitWidth="928.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/img_13.png" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="42.0" layoutY="46.0" opacity="0.82" prefHeight="457.0" prefWidth="739.0" style="-fx-background-color: #FFFFFF; -fx-border-radius: 5; -fx-background-radius: 5;">
+      <AnchorPane layoutX="48.0" layoutY="37.0" opacity="0.82" prefHeight="545.0" prefWidth="832.0" style="-fx-background-color: #FFFFFF; -fx-border-radius: 5; -fx-background-radius: 5;">
          <children>
-            <AnchorPane blendMode="HARD_LIGHT" prefHeight="60.0" prefWidth="739.0" style="-fx-background-color: #45474B; -fx-background-radius: 5;">
+            <AnchorPane blendMode="HARD_LIGHT" prefHeight="60.0" prefWidth="832.0" style="-fx-background-color: #043800; -fx-background-radius: 5;">
                <children>
                   <JFXButton fx:id="btnBack" alignment="CENTER" contentDisplay="GRAPHIC_ONLY" focusTraversable="false" layoutX="14.0" layoutY="7.0" onAction="#BackButtonOnAction" prefHeight="39.0" prefWidth="38.0">
                      <cursor>
@@ -36,93 +37,26 @@
                         <Glow level="1.0" />
                      </effect>
                      <graphic>
-                        <ImageView blendMode="DARKEN" fitHeight="39.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView blendMode="HARD_LIGHT" fitHeight="39.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/img_14.png" />
+                              <Image url="@../images/img_12.png" />
                            </image>
                         </ImageView>
                      </graphic>
                   </JFXButton>
-                  <Label alignment="CENTER" blendMode="COLOR_BURN" contentDisplay="CENTER" layoutX="326.0" layoutY="13.0" text="Items" textAlignment="CENTER" underline="true">
+                  <Label alignment="CENTER" blendMode="HARD_LIGHT" contentDisplay="CENTER" layoutX="373.0" layoutY="13.0" text="Items" textAlignment="CENTER" textFill="WHITE" underline="true">
                      <font>
                         <Font name="Showcard Gothic" size="30.0" />
                      </font>
-                     <effect>
-                        <ColorAdjust brightness="-1.0" contrast="1.0" />
-                     </effect>
                   </Label>
-                  <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="690.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="783.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/img_15.png" />
+                        <Image url="@../images/img_3.png" />
                      </image>
                   </ImageView>
                </children>
             </AnchorPane>
-            <Label layoutX="16.0" layoutY="151.0" text="Item Code">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <JFXTextField fx:id="txtItemCode" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="169.0" prefHeight="29.0" prefWidth="165.0">
-               <font>
-                  <Font name="System Italic" size="13.0" />
-               </font>
-               <effect>
-                  <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-               </effect>
-               <tooltip>
-                  <Tooltip text="Enter item code here" />
-               </tooltip>
-            </JFXTextField>
-            <Label layoutX="16.0" layoutY="212.0" text="Item Description">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <JFXTextField fx:id="txtItemDescription" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="231.0" prefHeight="29.0" prefWidth="165.0">
-               <font>
-                  <Font name="System Italic" size="13.0" />
-               </font>
-               <effect>
-                  <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-               </effect>
-               <tooltip>
-                  <Tooltip text="Enter item description here" />
-               </tooltip>
-            </JFXTextField>
-            <Label layoutX="16.0" layoutY="275.0" text="Unit Price">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <JFXTextField fx:id="txtUnitPrice" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="293.0" prefHeight="29.0" prefWidth="165.0">
-               <font>
-                  <Font name="System Italic" size="13.0" />
-               </font>
-               <effect>
-                  <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-               </effect>
-               <tooltip>
-                  <Tooltip text="Enter unit price here" />
-               </tooltip>
-            </JFXTextField>
-            <Label layoutX="16.0" layoutY="337.0" text="Quantity on Hand">
-               <font>
-                  <Font name="System Bold" size="13.0" />
-               </font>
-            </Label>
-            <JFXTextField fx:id="txtQuantityOnHand" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="358.0" prefHeight="29.0" prefWidth="165.0">
-               <font>
-                  <Font name="System Italic" size="13.0" />
-               </font>
-               <effect>
-                  <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-               </effect>
-               <tooltip>
-                  <Tooltip text="Enter quantity on hand here" />
-               </tooltip>
-            </JFXTextField>
-            <JFXButton fx:id="btnRefresh" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="520.0" layoutY="404.0" onAction="#RefreshButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #45474B; -fx-border-radius: 5; -fx-background-color: #45474B;" text="REFRESH" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnRefresh" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="586.0" layoutY="489.0" onAction="#RefreshButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #043800; -fx-border-radius: 5; -fx-background-color: #043800;" text="REFRESH" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
@@ -135,7 +69,7 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <JFXButton fx:id="btnUpdate" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="418.0" layoutY="404.0" onAction="#UpdateButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #45474B; -fx-border-radius: 5; -fx-background-color: #45474B;" text="UPDATE" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnUpdate" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="484.0" layoutY="489.0" onAction="#UpdateButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #043800; -fx-border-radius: 5; -fx-background-color: #043800;" text="UPDATE" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
@@ -148,7 +82,7 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <JFXButton fx:id="btnSave" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="316.0" layoutY="404.0" onAction="#SaveButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #45474B; -fx-border-radius: 5; -fx-background-color: #45474B;" text="SAVE" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="btnSave" alignment="CENTER" blendMode="HARD_LIGHT" buttonType="RAISED" contentDisplay="CENTER" layoutX="382.0" layoutY="489.0" onAction="#SaveButtonOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-border-color: #043800; -fx-border-radius: 5; -fx-background-color: #043800;" text="SAVE" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
@@ -161,35 +95,109 @@
                   </RadialGradient>
                </ripplerFill>
             </JFXButton>
-            <JFXTreeTableView id="#tblItems" fx:id="tblItems" layoutX="205.0" layoutY="82.0" prefHeight="309.0" prefWidth="519.0" style="-fx-selection-bar: #CD113B; -fx-font-weight: bold; -fx-border-color: #A9A9A9; -fx-border-radius: 5;" stylesheets="@style.css">
+            <JFXTreeTableView id="#tblItems" fx:id="tblItems" layoutX="246.0" layoutY="81.0" prefHeight="394.0" prefWidth="565.0" style="-fx-selection-bar: #ffec66; -fx-font-weight: bold; -fx-border-color: #A9A9A9; -fx-border-radius: 5;" stylesheets="@style.css">
                <columns>
                   <TreeTableColumn fx:id="colItemCode" prefWidth="73.0" text="Item Code" />
-                  <TreeTableColumn fx:id="colItemDescription" prefWidth="184.0" text="Item Description" />
-                  <TreeTableColumn fx:id="colUnitPrice" prefWidth="91.0" text="Unit Price" />
-                  <TreeTableColumn fx:id="colQuantity" prefWidth="76.0" text="Quantity" />
-                  <TreeTableColumn fx:id="colOption" prefWidth="84.0" text="Option" />
+                  <TreeTableColumn fx:id="colItemDescription" prefWidth="212.0" text="Item Description" />
+                  <TreeTableColumn fx:id="colUnitPrice" prefWidth="104.0" text="Unit Price" />
+                  <TreeTableColumn fx:id="colQuantity" prefWidth="81.0" text="Quantity" />
+                  <TreeTableColumn fx:id="colOption" prefWidth="76.0" text="Option" />
                </columns>
                <styleClass>
                   <String fx:value="table-row-cell:selected" />
                   <String fx:value="table-view" />
                </styleClass>
             </JFXTreeTableView>
-            <JFXTextField fx:id="txtSearchItem" alignment="CENTER" blendMode="DIFFERENCE" focusColor="WHITE" layoutX="16.0" layoutY="83.0" prefHeight="29.0" prefWidth="165.0" promptText="Search item...">
-               <font>
-                  <Font name="System Italic" size="13.0" />
-               </font>
-               <effect>
-                  <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-               </effect>
-               <tooltip>
-                  <Tooltip text="Search item here" />
-               </tooltip>
-            </JFXTextField>
-            <ImageView fitHeight="31.0" fitWidth="23.0" layoutX="18.0" layoutY="82.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/icons8-search.gif" />
-               </image>
-            </ImageView>
+            <Pane blendMode="HARD_LIGHT" layoutX="22.0" layoutY="81.0" prefHeight="91.0" prefWidth="201.0" style="-fx-background-color: #043800; -fx-background-radius: 10;">
+               <children>
+                  <Label blendMode="HARD_LIGHT" layoutX="19.0" layoutY="16.0" text="Search" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <ImageView blendMode="EXCLUSION" fitHeight="31.0" fitWidth="23.0" layoutX="63.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/output-onlinegiftools.gif" />
+                     </image>
+                  </ImageView>
+                  <JFXTextField fx:id="txtSearchItem" blendMode="SCREEN" focusColor="WHITE" layoutX="19.0" layoutY="46.0" prefHeight="29.0" prefWidth="164.0" promptText="Enter your text here...">
+                     <font>
+                        <Font name="System Italic" size="13.0" />
+                     </font>
+                     <tooltip>
+                        <Tooltip text="Search item here" />
+                     </tooltip>
+                  </JFXTextField>
+               </children>
+            </Pane>
+            <AnchorPane blendMode="HARD_LIGHT" layoutX="22.0" layoutY="191.0" prefHeight="330.0" prefWidth="201.0" style="-fx-background-color: #043800; -fx-background-radius: 10;">
+               <children>
+                  <Label blendMode="HARD_LIGHT" layoutX="19.0" layoutY="21.0" text="Item Code" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtItemCode" blendMode="ADD" focusColor="WHITE" layoutX="19.0" layoutY="39.0" prefHeight="29.0" prefWidth="165.0">
+                     <font>
+                        <Font name="System Italic" size="13.0" />
+                     </font>
+                     <effect>
+                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
+                     </effect>
+                     <tooltip>
+                        <Tooltip text="Enter item code here" />
+                     </tooltip>
+                  </JFXTextField>
+                  <Label blendMode="HARD_LIGHT" layoutX="19.0" layoutY="96.0" text="Item Description" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtItemDescription" blendMode="ADD" focusColor="WHITE" layoutX="19.0" layoutY="115.0" prefHeight="29.0" prefWidth="165.0">
+                     <font>
+                        <Font name="System Italic" size="13.0" />
+                     </font>
+                     <effect>
+                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
+                     </effect>
+                     <tooltip>
+                        <Tooltip text="Enter item description here" />
+                     </tooltip>
+                  </JFXTextField>
+                  <Label blendMode="HARD_LIGHT" layoutX="19.0" layoutY="170.0" text="Unit Price" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtUnitPrice" blendMode="ADD" focusColor="WHITE" layoutX="19.0" layoutY="188.0" prefHeight="29.0" prefWidth="165.0">
+                     <font>
+                        <Font name="System Italic" size="13.0" />
+                     </font>
+                     <effect>
+                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
+                     </effect>
+                     <tooltip>
+                        <Tooltip text="Enter unit price here" />
+                     </tooltip>
+                  </JFXTextField>
+                  <Label blendMode="HARD_LIGHT" layoutX="19.0" layoutY="249.0" text="Quantity on Hand" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtQuantityOnHand" blendMode="ADD" focusColor="WHITE" layoutX="19.0" layoutY="270.0" prefHeight="29.0" prefWidth="165.0">
+                     <font>
+                        <Font name="System Italic" size="13.0" />
+                     </font>
+                     <effect>
+                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
+                     </effect>
+                     <tooltip>
+                        <Tooltip text="Enter quantity on hand here" />
+                     </tooltip>
+                  </JFXTextField>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </children>
